--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,9 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
-        <td><%= link_to 'Show', user, class: "btn btn-primary" %></td>
+        <td>
+          <%= link_to 'Show', user, class: "btn btn-primary" %>
+        </td>
       </tr>
     <% end %>
   </tbody>
