--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,9 @@
       <tr>
         <td><%= user.name %></td>
         <td>
-          <%= link_to 'Show', user, class: "btn btn-primary" %>
+          <% if user.id == @current_user.id %>
+            <%= link_to 'Show', user, class: "btn btn-primary" %>
+          <% end %>
         </td>
       </tr>
     <% end %>
