--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,9 +17,9 @@
       <tr>
         <td><%= user.name %></td>
         <td>
-          <% if user.id == @current_user.id %>
+          <% # if user.id == @current_user.id %>
             <%= link_to 'Show', user, class: "btn btn-primary" %>
-          <% end %>
+          <% # end %>
         </td>
       </tr>
     <% end %>
