--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= image.title %></td>
         <td><%= image_tag(image.authenticated_image_url(:thumb)) if image.data.present? %></td>
         <td>
-            <% if @current_user && !@current_user.favorites.select{|img| img.id == image.id}.empty? %>
+            <% if @current_user && !@current_user.favorites.select{|img| img.image_id == image.id}.empty? %>
                 favorite
             <%else%>
             <%end%>
