--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -3,6 +3,10 @@
 </div>
 <% if @current_user %>
 <div class="row">
+    <% if !@current_user.favorites.select{|img| img.image_id == @image.id}.empty? %>
+      favorite
+    <%else%>
+    <%end%>
     <%= link_to 'Destroy', @image, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger pull-right" %>
     <%= link_to 'Edit', edit_image_path(@image), class: "btn btn-warning pull-right" %>
 </div>
