--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,3 +13,25 @@
   <%= @user.name %>
 </p>
 </div>
+
+<table class="table">
+  <caption>お気に入り一覧</caption>
+  <thead>
+  <tr>
+    <th>Title</th>
+    <th>Image</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @images.each do |image| %>
+      <tr>
+        <td><%= image.title %></td>
+        <td><%= image_tag(image.authenticated_image_url(:thumb)) if image.data.present? %></td>
+        <td><%= link_to 'Show', image, class: "btn btn-primary" %></td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
+
