--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,24 +14,6 @@
 </p>
 </div>
 
-<table class="table">
-  <caption>お気に入り一覧</caption>
-  <thead>
-  <tr>
-    <th>Title</th>
-    <th>Image</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
+<%= render 'table', images: @my_images, title: '投稿画像一覧' %>
 
-  <tbody>
-  <% @images.each do |image| %>
-      <tr>
-        <td><%= image.title %></td>
-        <td><%= image_tag(image.authenticated_image_url(:thumb)) if image.data.present? %></td>
-        <td><%= link_to 'Show', image, class: "btn btn-primary" %></td>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
-
+<%= render 'table', images: @fav_images, title: 'お気に入り一覧' %>
